--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,26 @@
     display: block;
 }
 
+@media screen and (orientation:portrait) {
+    .menu{
+        height: 20%;
+        width: 100%;
+        top: -20%;
+        left: 0;
+        transition: left 0.3s;
+        box-shadow: 10px 0px 21px -10px rgba(0,0,0,0.75);
+    }
+    .menuText{
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+        margin: 10px;
+    }
+    .show{
+        top: 0;
+    }
+}
+
 /*Header*/
 header {
     grid-area: hd;
