--- a/css/style.css
+++ b/css/style.css
@@ -115,10 +115,59 @@ grid1{
     ;
 }
 
+/*Start site*/
 index{
     grid-area: ma;
 
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+
     background-color: #ffd7cd;
+}
+
+.startInfo{
+    box-sizing: border-box;
+
+    width: 100%;
+    height: 20%;
+
+    padding: 2%;
+}
+.startItem{
+    box-sizing: border-box;
+
+    width: 50%;
+    height: 15%;
+
+    padding: 2%;
+
+}
+.startBg{
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;   
+    object-fit: cover;
+    
+    border: white solid 5px;
+}
+.startPart{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.startHeader{
+    text-align: center;
+    color: white;
+    font-size: 40px;
+    font-family: Helvetica, sans-serif, Arial;
+    font-weight: bold;
+}
+.startPara{
+    color: white;
+    font-size: 20px;
+    font-family: Helvetica, sans-serif, Arial;
 }
 
 /*Grid with top/bottom*/
