--- a/css/universal.css
+++ b/css/universal.css
@@ -9,20 +9,22 @@
 
 .menu{
     height: 100%;
-    width: 30%;
+    width: 600px;
     background: #774b77;
     position: fixed;
     top: 0;
-    left: -30%;
+    left: -600px;
     transition: left 0.3s;
     box-shadow: 10px 0px 21px -10px rgba(0,0,0,0.75);
     z-index: 10;
 }
 .menuText{
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 60px;
     margin: 30px;
+    
+    font-size: 79px;
+    font-family: Optima,Segoe,Segoe UI,Candara,Calibri,Arial,sans-serif;
+    font-weight: bold;
+    color: white;
 }
 
 .show{
@@ -44,26 +46,6 @@
     display: block;
 }
 
-@media screen and (orientation:portrait) {
-    .menu{
-        height: 20%;
-        width: 100%;
-        top: -20%;
-        left: 0;
-        transition: left 0.3s;
-        box-shadow: 10px 0px 21px -10px rgba(0,0,0,0.75);
-    }
-    .menuText{
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 30px;
-        margin: 10px;
-    }
-    .show{
-        top: 0;
-    }
-}
-
 /*Header*/
 header {
     grid-area: hd;
@@ -72,7 +54,7 @@ header {
     justify-content: space-between;
     align-items: center;
 
-    background-color: #101414;
+    background-color: #774b77;
 }
 .hDiv {
     display: inline-flex;
@@ -88,7 +70,7 @@ footer {
     justify-content: space-between;
     align-items: center;
 
-    background-color: #101414;
+    background-color: #774b77;
 }
 .fDiv {
     display: inline-flex;
@@ -97,9 +79,13 @@ footer {
     gap: 20px;
 }
 
-.fText {
+.fText { 
+    line-height: 100%;
+    text-indent: 20px;
+
+    font-size: 30px;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial Narrow,Arial,sans-serif;
 }
 
 
@@ -126,4 +112,31 @@ grid2{
     's2 s2 s2 s2'
     'ft ft ft ft'
     ;
+}
+
+@media screen and (orientation:portrait) {
+    .menu{
+        height: 300px;
+        width: 100%;
+        top: -300px;
+        left: 0;
+        transition: left 0.3s;
+    }
+    .menuText{
+        font-size: 49px;
+    }
+    .show{
+        top: 0;
+    }
+    .fDiv{
+        height: 40%;
+    }
+    .fText { 
+        line-height: 30%;
+        text-indent: 5px;
+    
+        font-size: 20px;
+        color: white;
+        font-family: Arial Narrow,Arial,sans-serif;
+    }
 }
