--- a/css/merch.css
+++ b/css/merch.css
@@ -11,11 +11,6 @@ section1{
     background-image: url(/img/merch/mainBg.jpg);
     background-size: cover;
 }
-section2{
-    grid-area: s2;
-
-    background-color: #f8f4ec;
-}
 
 #merchHeader{
     font-size: 79px;
@@ -112,6 +107,41 @@ border-radius: 50%;
 }
 /* ↑↑↑ Slider from https://www.w3schools.com/howto/howto_css_switch.asp ↑↑↑ */
 
+section2{
+    grid-area: s2;
+
+    display: flex;
+    flex-wrap: wrap;
+    align-content: start;
+
+    background-color: #f8f4ec;
+}
+
+.merchItem{
+    width: 21%;
+    aspect-ratio: 1 / 1;
+    margin: 2%;
+
+    box-sizing: border-box;
+    border: #928977 solid 2px;
+}
+.merchHeader{
+    text-align: center;
+    
+    font-size: 30px;
+    font-family: Optima,Segoe,Segoe UI,Candara,Calibri,Arial,sans-serif; 
+    color: #928977;
+}
+
+.merchImg{
+    object-fit: cover;
+    width: 100%;
+    height: 70%;
+
+    background-color: #d4ccb9;
+    border-bottom: #928977 solid 2px;
+}
+
 @media screen and (orientation:portrait) {
     #merchHeader{
         font-size: 49px;
@@ -123,5 +153,17 @@ border-radius: 50%;
         font-size: 15px;
         font-family: Arial Narrow,Arial,sans-serif; 
         color: white;
+    }
+
+    .merchItem{
+        width: 46%;
+        margin: 2%;
+    }
+    .merchHeader{
+        text-align: center;
+        
+        font-size: 20px;
+        font-family: Optima,Segoe,Segoe UI,Candara,Calibri,Arial,sans-serif; 
+        color: #928977;
     }
 }
